# py_challenge_solution

./: .gitignore  .gitmodules  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  ml.ipynb  pyproject.toml  viz.ipynb
backend/src/py_challenge_backend/: __main__.py  app.py  models.py  utils.py
backend/src/py_challenge_backend/ml/: predict.py  train.py
backend/tests/: test_label_animals.py  test_models.py
frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml
frontend/src/py_challenge_frontend/: __main__.py  app.py  db.py  ml.py  models.py
