[project]
name = "py_challenge_backend"
dynamic = ["version"]
description = "Backend solution for py_challenge"
authors = [{ name = "jfaldanam" , email = "jfaldanam@uma.es"}]
license = "MIT"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.4.0",
    "scikit-learn>=1.6.0",
    "requests>=2.32.0",
    "pandas>=2.0.0",
    "numpy>=2.2.0",
    "structlog>=25.0.0",
    "skl2onnx>=1.18.0",
    "onnxruntime>=1.18.0",
    "minio>=7.2.0",
]

[project.urls]
"Homepage" = "https://github.com/jfaldanam/py_challenge_solution"
"Bug Tracker" = "https://github.com/jfaldanam/py_challenge_solution/issues"

[project.optional-dependencies]
dev = ["ruff", "pytest", "coverage"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/py_challenge_backend/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_challenge_backend"]